--- a/src/pages/en/index.less
+++ b/src/pages/en/index.less
@@ -15,7 +15,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  padding: 10px 20px;
+  padding: 20px;
   font-size: 14px;
   border-radius: 8px;
   outline: none;
@@ -28,4 +28,17 @@
   margin-left: 20px;
   border-radius: 8px;
   background-color: rgba(255, 255, 255, .1);
+}
+
+.placeholderBox {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.placeholderIcon {
+  font-size: 80px;
+  color: #666;
 }
