--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -33,12 +33,16 @@
   }
 }
 
-.linkList {
+.linkListWrap {
   overflow: hidden;
   margin-left: 90px;
   padding: 20px;
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.linkList {
+  overflow: hidden;
 }
 
 .linkItem {
@@ -50,29 +54,60 @@
   padding: 0 10px;
   border-radius: 8px;
   margin-right: 16px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: pointer;
 }
 
 .linkItemImg {
   display: block;
-  width: 24px;
-  height: 24px;
+  width: 16px;
+  height: 16px;
   border-radius: 12px;
   overflow: hidden;
 }
 
 .linkItemWrap {
   width: 100px;
-  padding: 10px;
+  padding: 4px 6px;
   overflow: hidden;
   cursor: pointer;
 }
 
 .linkItemTitle {
+  font-size: 12px;
   margin: 4px 0;
 }
 
 .linkItemSubTitle {
-  // margin-top: 4px;
   font-size: 12px;
   color: #888;
+}
+
+.linkGroup {
+  margin-bottom: 32px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.linkGroupTitle {
+  margin-bottom: 12px;
+}
+
+.action {
+  position: absolute;
+  bottom: 24px;
+  right: 24px;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #333;
+  text-align: center;
+  font-size: 20px;
+  line-height: 48px;
+  cursor: pointer;
 }
