--- a/src/pages/en/index.less
+++ b/src/pages/en/index.less
@@ -20,14 +20,14 @@
   border-radius: 8px;
   outline: none;
   border: none;
-  resize:none;
+  resize: none;
 }
 
 .resultContent {
   flex: 1;
   margin-left: 20px;
   border-radius: 8px;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .placeholderBox {
@@ -41,4 +41,40 @@
 .placeholderIcon {
   font-size: 80px;
   color: #666;
+}
+
+.translateContent {
+  padding: 12px;
+}
+
+.translateRow {
+  margin-bottom: 16px;
+}
+
+.translateRowTitle {
+  font-weight: 600;
+  margin-bottom: 4px;
+  color: #888;
+}
+
+.translateRowMain {
+  padding: 12px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.translateRowItem {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 8px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.translateRowItemLabel {
+  margin-right: 16px;
+  white-space: nowrap;
+  color: #999;
 }
