--- a/src/pages/en/index.less
+++ b/src/pages/en/index.less
@@ -53,7 +53,8 @@
 
 .translateRowTitle {
   font-weight: 600;
-  margin-bottom: 4px;
+  font-size: 12px;
+  margin-bottom: 8px;
   color: #888;
 }
 
