--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charSet="utf-8" />
   <title>P-Client</title>
+  <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no" name="viewport">
 </head>
 <body>
   <div id="root" style="height: 100%;"></div>
