添加百度统计

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,6 +4,16 @@
   <meta charSet="utf-8" />
   <title>P-Client</title>
   <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no" name="viewport">
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?0697f95e59987148f82d79e3191a362f";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+    
 </head>
 <body>
   <div id="root" style="height: 100%;"></div>
