--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,7 +1,13 @@
-.content {
-  padding: 10px 20px;
-  background-color: #f5f5f5;
+.page {
   height: 100%;
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  padding: 10px;
+  flex: 1;
 }
 
 .head {
@@ -22,14 +28,14 @@
 }
 
 .main {
-  background-color: black;
-  border-radius: 10px;
+  background-color: #333;
   color: #fff;
   height: 100%;
 }
 
-@media all and (max-width: 400px) {
+@media all and (max-width: 600px) {
   .content {
     padding: 0;
+    margin: 0;
   }
 }
