--- a/src/layouts/menu/index.less
+++ b/src/layouts/menu/index.less
@@ -1,58 +1,96 @@
-.menuLeft {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
+.menuNav {
+  width: 100%;
+  padding: 0 10px;
+  background-color: #333;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 64px;
-  background-color: black;
 }
 
 .menuList {
   width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 0;
 }
 
 .menuItem {
   height: 64px;
-  color: #fff;
   text-align: center;
-  margin-bottom: 20px;
   font-size: 14px;
   cursor: pointer;
-  transition: margin-right 0.2s;
-  border-radius: 50%;
-
-  &:hover {
-    .menuActive;
-  }
 
   a {
     display: block;
     color: #fff;
-    padding: 20px 0;
+    padding: 20px 32px;
   }
 }
 
 .menuActive {
-  margin-right: -12px;
-  background: #000;
+  background: #fff;
 
   .menuIcon {
-    margin-right: -12px;
-    font-size: 24px;
+    color: #333;
   }
 }
 
 .menuIcon {
-  font-size: 20px;
+  font-size: 24px;
   transition: font-size 0.1s;
 }
 
-@media all and (max-width: 400px) {
+.searchBox {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.searchWrap {
+  min-width: 30%;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  overflow: hidden;
+  background-color: #fff;
+  padding: 0 5px;
+}
+
+.searchType {
+  height: 32px;
+  font-size: 20px;
+  padding: 0 10px;
+  border-left: 1px solid #f5f5f5;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #f5f5f5;
+  }
+}
+
+.searchInput {
+  flex: 1;
+
+  input {
+    width: 100%;
+    height: 48px;
+    line-height: 48px;
+    font-size: 16px;
+    outline: none;
+    padding: 10px 10px;
+    border: none;
+
+    &::placeholder {
+      color: #bbb;
+    }
+  }
+}
+
+@media all and (max-width: 480px) {
   .menuLeft {
     z-index: 9;
+  }
+
+  .searchBox {
+    display: none;
   }
 }
