--- a/src/layouts/menu/index.less
+++ b/src/layouts/menu/index.less
@@ -1,7 +1,7 @@
 .menuNav {
   width: 100%;
   padding: 0 10px;
-  background-color: #333;
+  background-color: #4b4b4b;
   display: flex;
 }
 
@@ -46,7 +46,8 @@
 }
 
 .searchWrap {
-  min-width: 30%;
+  min-width: 40%;
+  max-width: 400px;
   display: flex;
   align-items: center;
   border-radius: 4px;
@@ -70,14 +71,12 @@
 
 .searchInput {
   flex: 1;
+  padding: 6px 0;
 
   input {
     width: 100%;
-    height: 48px;
-    line-height: 48px;
-    font-size: 16px;
+    font-size: 14px;
     outline: none;
-    padding: 10px 10px;
     border: none;
 
     &::placeholder {
