--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,27 +1,25 @@
 .wrap {
-  padding: 20px;
+  padding: 10px;
   height: 100%;
   position: relative;
 }
 
 .linkTabs {
   position: absolute;
-  top: 20px;
+  top: 10px;
   bottom: 20px;
   width: 80px;
   text-align: center;
   line-height: 32px;
-  border-radius: 8px;
   margin: 0;
-  padding: 20px 0;
+  padding: 10px 0;
   display: flex;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: #4d4d4d;
 }
 
 .linkTabItem {
   margin: 8px;
-  border-radius: 8px;
   cursor: pointer;
 
   &.active {
@@ -37,46 +35,50 @@
   overflow: hidden;
   margin-left: 90px;
   padding: 20px;
-  border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
 .linkList {
-  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .linkItem {
-  float: left;
   display: flex;
   align-items: center;
-  background-color: #fff;
-  color: #444;
-  padding: 0 10px;
-  border-radius: 8px;
+  background-color: #4d4d4d;
+  color: #fff;
+  padding: 5px 10px;
   margin-right: 16px;
-  overflow: hidden;
+  margin-bottom: 15px;
   white-space: nowrap;
   text-overflow: ellipsis;
   cursor: pointer;
+  border-radius: 4px;
+  box-shadow: 5px 5px 10px #414141, -5px -5px 10px #595959;
+
+  &:hover {
+    box-shadow: inset 5px 5px 10px #414141, inset -5px -5px 10px #595959;
+  }
 }
 
 .linkItemImg {
   display: block;
-  width: 16px;
-  height: 16px;
-  border-radius: 12px;
+  width: 28px;
+  height: 28px;
+  border-radius: 14px;
   overflow: hidden;
 }
 
 .linkItemWrap {
-  width: 100px;
+  width: 160px;
   padding: 4px 6px;
   overflow: hidden;
   cursor: pointer;
 }
 
 .linkItemTitle {
-  font-size: 12px;
+  font-size: 14px;
   margin: 4px 0;
 }
 
@@ -86,7 +88,7 @@
 }
 
 .linkGroup {
-  margin-bottom: 32px;
+  margin-bottom: 10px;
 
   &:last-child {
     margin-bottom: 0;
